--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
+*{
+    background-color: rgb(34, 34, 46);
+    color: white;
+    font-size: 1.1rem;
+    font-weight: bold;
+    font-family: "Helvetica Neue", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container-links{
+display: flex;
+justify-content:center;
+align-items:center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn{
+margin:1rem;
+padding: 1rem;
+background-color: rgba(14, 67, 9, 0.823);
+border: 4px solid white;
+text-decoration: none;
+text-align:center;
+width: 10vw;
+font-size: 1.4rem;
+border-radius: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn:hover{
+    background-color: rgba(60, 202, 72, 0.823);
+    font-size: 1.4rem;
 }
-
-.App-link {
-  color: #61dafb;
+.btn:active{
+    background-color: rgba(45, 139, 53, 0.823);
+    font-size: 1.44rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.condicional{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin:2rem;
 }
